--- a/11.02.md
+++ b/11.02.md
@@ -1,24 +1,20 @@
 Домашнее задание к занятию «Кеширование Redis/memcached»
 
-Инструкция по выполнению домашнего задания
-
-Сделайте fork репозитория c шаблоном решения к себе в Github и переименуйте его по названию или номеру занятия, например, https://github.com/имя-вашего-репозитория/gitlab-hw или https://github.com/имя-вашего-репозитория/8-03-hw).
-Выполните клонирование этого репозитория к себе на ПК с помощью команды git clone.
-Выполните домашнее задание и заполните у себя локально этот файл README.md:
-впишите вверху название занятия и ваши фамилию и имя;
-в каждом задании добавьте решение в требуемом виде: текст/код/скриншоты/ссылка;
-для корректного добавления скриншотов воспользуйтесь инструкцией «Как вставить скриншот в шаблон с решением»;
-при оформлении используйте возможности языка разметки md. Коротко об этом можно посмотреть в инструкции по MarkDown.
-После завершения работы над домашним заданием сделайте коммит (git commit -m "comment") и отправьте его на Github (git push origin).
-Для проверки домашнего задания преподавателем в личном кабинете прикрепите и отправьте ссылку на решение в виде md-файла в вашем Github.
-Любые вопросы задавайте в чате учебной группы и/или в разделе «Вопросы по заданию» в личном кабинете.
-Желаем успехов в выполнении домашнего задания.
-
 Задание 1. Кеширование
 
 Приведите примеры проблем, которые может решить кеширование.
 
 Приведите ответ в свободной форме.
+
+Ответ:
+
+1.Повышение производительности приложений
+2.Сокращение затрат на базы данных
+3.Снижение нагрузки на серверную часть
+4.Прогнозируемая производительность
+5.Устранение проблемных мест в базах данных
+6.Повышение пропускной способности операций чтения (количество операций ввода-вывода в секунду)
+
 
 Задание 2. Memcached
 
